--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "autoprefixer": "^10.4.7",
         "axios": "^0.27",
         "laravel-mix": "^6.0.49",
-        "lodash": "^4.17.19",
+        "lodash": "^4.17.21",
         "postcss": "^8.4.14",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.54.3",
@@ -36,6 +36,7 @@
         "@tailwindcss/typography": "^0.5.9",
         "chart.js": "^4.3.0",
         "date-fns": "^2.30.0",
+        "moment-timezone": "^0.5.43",
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2",
         "vue-chartjs": "^5.2.0",
